# cluelyirl

./: .gitignore  README.md  agent_sounds.py  audio_player.py  main.py  parakeet_stt.py  parakeet_stt_sync.py  pyproject.toml
archive/: agent_example.py  parakeet_stt.py  speech_recognition.py  with_diarization.py  with_diarization_fixed.py  with_diarization_fixed_new.py  with_diarization_offline.py
sounds/: cinematic_boom.opus  death_note_l_theme.m4a  death_note_l_theme.opus  heated_long_vibration.m4a  short_cinematic_boom.m4a  short_ding.m4a  short_vibration.m4a  short_vibration_double.m4a  vine_boom.opus
sounds/original/: cinematic_boom.m4a  ding.m4a  long_vibration.m4a  vibration.m4a  vine_boom.m4a
